# opengl_craft

./: CMakeLists.txt
blocktypes/: blocktypes.json
include/glad/: glad.h
src/: Block.cpp  Block.h  BlockRegistry.cpp  BlockRegistry.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Game.cpp  Game.h  MeshSSBO.cpp  MeshSSBO.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  ThreadPool.cpp  ThreadPool.h  World.cpp  World.h  main.cpp  openglDebug.h
src/libraries/: glad.c
src/shaders/: voxel.fs.glsl  voxel.vs.glsl
